[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/sprites/rival sprites/rival sprites ANGELA MELVIN ALT.png" type="Texture" id=1]
[ext_resource path="res://src/play_actors/RivalCompanion.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/play actors/play characters foot stomp.mp3" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 3780, 840, 420, 420 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 4200, 840, 420, 420 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 6720, 1260, 420, 420 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 7140, 1260, 420, 420 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 1680, 840, 420, 420 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 1260, 840, 420, 420 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 2100, 1260, 420, 420 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 2520, 1260, 420, 420 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 0, 1260, 420, 420 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 420, 1260, 420, 420 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 840, 1260, 420, 420 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 3780, 1260, 420, 420 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 4200, 1260, 420, 420 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 4620, 1260, 420, 420 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 5040, 1260, 420, 420 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "Climbing",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "Crawlling",
"speed": 3.0
}, {
"frames": [ SubResource( 41 ) ],
"loop": false,
"name": "Jumpgoesdown",
"speed": 0.0
}, {
"frames": [ SubResource( 42 ) ],
"loop": false,
"name": "Jumpgoesup",
"speed": 0.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "Pushing",
"speed": 2.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "Running",
"speed": 4.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "Swimming",
"speed": 2.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "Swimup",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.5, 31.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "playerhurt"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 25.5, 82.5 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 5.5, 82.5 )

[node name="RivalCompanion" type="KinematicBody2D" groups=["rival", "rivalcompanion"]]
z_index = 10
collision_layer = 16384
collision_mask = 276
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -133 )
scale = Vector2( 0.64, 0.64 )
frames = SubResource( 38 )
animation = "Crawlling"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.5, -31.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/playerhurt = SubResource( 3 )

[node name="LadderCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -243 )
scale = Vector2( 4, 4 )
enabled = true
cast_to = Vector2( 0, 67 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="PortalCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalCheck"]
position = Vector2( -2.5, -82.5 )
shape = SubResource( 7 )

[node name="CheckpointTween" type="Tween" parent="."]

[node name="PushDetector" type="Area2D" parent="." groups=["PushDetector"]]
position = Vector2( 53, 0 )
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushDetector"]
position = Vector2( -1, -83.5 )
shape = SubResource( 35 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -4.095
pitch_scale = 2.98
bus = "Sound"

[node name="Floordetect" type="RayCast2D" parent="."]
position = Vector2( 61, -16 )
enabled = true
collision_mask = 4

[node name="Signdetect" type="RayCast2D" parent="."]
position = Vector2( 51, -99 )
enabled = true
cast_to = Vector2( 83, 0 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="Signdetectclimb" type="RayCast2D" parent="."]
position = Vector2( 51, -99 )
enabled = true
cast_to = Vector2( 83, 0 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="Rundetect" type="RayCast2D" parent="."]
position = Vector2( 51, -99 )
enabled = true
cast_to = Vector2( 83, 0 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="Swimrightdetect" type="RayCast2D" parent="."]
position = Vector2( 51, -99 )
enabled = true
cast_to = Vector2( 83, 0 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="Swimupdetect" type="RayCast2D" parent="."]
position = Vector2( 51, -99 )
enabled = true
cast_to = Vector2( 83, 0 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="Crawldetect" type="RayCast2D" parent="."]
position = Vector2( 51, -99 )
enabled = true
cast_to = Vector2( 83, 0 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[connection signal="area_entered" from="PortalCheck" to="." method="_on_PortalCheck_area_entered"]
[connection signal="area_entered" from="PushDetector" to="." method="_on_PushDetector_area_entered"]
[connection signal="area_exited" from="PushDetector" to="." method="_on_PushDetector_area_exited"]
